# apscript

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
aps/: Cargo.toml
aps/src/: main.rs
aps_core/: Cargo.toml  README.md
aps_core/src/: ast.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  vm.rs  wasm.rs
editor/: index.html  package-lock.json  package.json
editor/lib/: README.md  aps_core.d.ts  aps_core_bg.js  aps_core_bg.wasm  aps_core_bg.wasm.d.ts
editor/public/: aps_core.js  package.json
editor/src/: main.ts  style.css  style.scss
src/: ast.rs  lexer.rs  main.rs  parser.rs  stdlib.rs  vm.rs
