[package]
name = "aps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
gc = { version = "0.4.1", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
